# chatgpt_slop

./: .gitignore  Cargo.toml  config.toml
src/: main.rs
